examples/test/testpolicy10911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10911
  namespace: namespace97
spec:
  podSelector:
    matchLabels:
      key35: value46
      key15: value5
      key47: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value42
      podSelector:
        matchLabels:
          key34: value19
          key5: value49
